fix text overflow and date display

--- a/react-client/src/css/timeline/TimelineElement.css
+++ b/react-client/src/css/timeline/TimelineElement.css
@@ -53,3 +53,7 @@
 .description, .description-editor {
     font-size: 15px;
 }
+
+.vertical-timeline-element--work * {
+    overflow-wrap: break-word; 
+}
